Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/gce/gceMakeLin.h

#ifndef gce_MakeLin_H
#define gce_MakeLin_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* gce_MakeLin_Ctor608B963B(
	void* A1);
extern "C" DECL_EXPORT void* gce_MakeLin_CtorE13B639C(
	void* P,
	void* V);
extern "C" DECL_EXPORT void* gce_MakeLin_Ctor1CB0FB3C(
	void* Lin,
	void* Point);
extern "C" DECL_EXPORT void* gce_MakeLin_Ctor5C63477E(
	void* P1,
	void* P2);
extern "C" DECL_EXPORT void* gce_MakeLin_Value(void* instance);
extern "C" DECL_EXPORT void* gce_MakeLin_Operator(void* instance);
extern "C" DECL_EXPORT void gceMakeLin_Dtor(void* instance);

#endif